--- a/app.yaml
+++ b/app.yaml
@@ -5,35 +5,8 @@ handlers:
 - url: /.*
   script: _go_app
   
-                
-#- url: /(.*\.html)
-#  mime_type: text/html
-#  static_files: static/\1
-#  upload: static/(.*\.html)
-#                
-#- url: /js/(.*\.js)
-#  mime_type: text/javascript
-#  static_files: static/js/\1
-#  upload: static/js/(.*\.js)
-#  # index files
-#- url: /(.+)/
-#  static_files: static/\1/index.html
-#  upload: static/(.+)/index.html
-#
-#- url: /
-#  static_files: static/index.html
-#  upload: static/index.html
-#- url: /.*.html
-#  static_files: public/*.html
-#  upload: public/*.html
-#- url: /css/.*
-#  static_files: public/css/.*
-#  upload: public/css/.*
-#- url: /fonts/.*
-#  static_dir: public/fonts/.*
-#  upload: public/fonts/.*
-#- url: /js/.*
-#  static_dir: public/js/.*
-#  upload: public/js/.*
-#  #- url: /hello/.*
-#  #script: _go_app
+env_variables:
+  DEV_SERVER_DOMAIN: "www.darkmane.me"
+  DARKMANE_DARKMANE_ME: "www.darkmane.me"
+  DARKMANE_ME: "www.darkmane.me"
+  GW2CRAFT_DARKMANE_ME: "gw2-craft.darkmane.me"
